force-app/main/default/objects/Order_Item__c/fields/Sweeping_Cleaning_Order__c.field-meta.xml
<CustomField>
    <fullName>Sweeping_Cleaning_Order__c</fullName>
    <label>Sweeping/Cleaning</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>