force-app/main/default/objects/Order_Item__c/fields/Tab_View__c.field-meta.xml
<CustomField>
    <fullName>Tab_View__c</fullName>
    <label>Tab View</label>
    <length>50</length>
    <type>Text</type>
</CustomField>