force-app/main/default/objects/Order_Item__c/fields/Tabadul_Order__c.field-meta.xml
<CustomField>
    <fullName>Tabadul_Order__c</fullName>
    <label>Tabadul</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>