force-app/main/default/objects/Order_Item__c/fields/Tarpauline_charge_Order__c.field-meta.xml
<CustomField>
    <fullName>Tarpauline_charge_Order__c</fullName>
    <label>Tarpauline charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>