force-app/main/default/objects/Order_Item__c/fields/Total_Destination_c__c.field-meta.xml
<CustomField>
    <fullName>Total_Destination_c__c</fullName>
    <label>Total_Destination_c</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>