force-app/main/default/objects/Order_Item__c/fields/Total_SL_Order__c.field-meta.xml
<CustomField>
    <fullName>Total_SL_Order__c</fullName>
    <label>Total SL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>