force-app/main/default/objects/Order_Item__c/fields/Transit_Time__c.field-meta.xml
<CustomField>
    <fullName>Transit_Time__c</fullName>
    <label>Transit Time</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>