force-app/main/default/objects/Order_Item__c/fields/Truck_Head_charges_Order__c.field-meta.xml
<CustomField>
    <fullName>Truck_Head_charges_Order__c</fullName>
    <label>Truck Head charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>