force-app/main/default/objects/Order_Item__c/fields/Vessel_certificate_charges_Order__c.field-meta.xml
<CustomField>
    <fullName>Vessel_certificate_charges_Order__c</fullName>
    <label>Vessel certificate charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>