force-app/main/default/objects/Order_Item__c/fields/Vessel_ETD__c.field-meta.xml
<CustomField>
    <fullName>Vessel_ETD__c</fullName>
    <label>Vessel ETD</label>
    <type>Date</type>
</CustomField>