force-app/main/default/objects/Order_Item__c/fields/Wrapping_packing_charges_Order__c.field-meta.xml
<CustomField>
    <fullName>Wrapping_packing_charges_Order__c</fullName>
    <label>Wrapping/packing charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>