force-app/main/default/objects/Order_Item__c/fields/Xray_Order__c.field-meta.xml
<CustomField>
    <fullName>Xray_Order__c</fullName>
    <label>Xray</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>